[package]
name = "orbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4"
nalgebra = { version = "0.32", features = ["convert-glam021"] }
bincode = "1.3"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
