[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4"
nalgebra = { version = "0.32", features = ["convert-glam021"] }
thunderdome = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
